--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,8 +19,8 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - uses: act10ns/slack@v2
-          with: 
-            status: ${{ job.status }}
-            steps: ${{ toJson(steps) }}
-            channel: '#workflows'
-          if: always()
+        with: 
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          channel: '#viandas'
+        if: always()
